bluejay-typegen/tests/validation_cases/error/invalid_query.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: String
    }
])]
mod schema {
    #[query([
        {
            bar
        }
    ])]
    mod query {}
}

fn main() {}
