bluejay-typegen/tests/validation_cases/error/invalid_query.stderr
error: Error: Field `bar` does not exist on type `Query`
          ╭─[<unknown>:1:3]
          │
        1 │ { bar }
          │   ─┬─
          │    ╰─── Field does not exist on type `Query`
       ───╯
  --> tests/validation_cases/error/invalid_query.rs:7:13
   |
7  |       #[query([
   |  _____________^
8  | |         {
9  | |             bar
10 | |         }
11 | |     ])]
   | |_____^
